	PR middle-end/26306 	* gimplify.c (gimplify_expr): Only force a load for references to 	non-BLKmode volatile values. 	* doc/implement-c.texi (Qualifiers implementation): Document the 	interpretation of what a volatile access is. 	* doc/extend.texi (C++ Extensions): Rework same documentation.

git-svn-id: svn+ssh://gcc.gnu.org/svn/gcc/trunk@118900 138bc75d-0d04-0410-961f-82ee72b054a4